2011-02-24  Darin Adler  <darin@apple.com>

Reviewed by Alexey Proskuryakov.

        REGRESSION (r79466): http/tests/incremental/slow-utf8-html.pl flaky due to incorrect assertions
        https://bugs.webkit.org/show_bug.cgi?id=55135

        * platform/text/TextCodecUTF8.cpp:
        (WebCore::TextCodecUTF8::decode): Removed incorrect assertions.


Canonical link: https://commits.webkit.org/69574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79655 268f45cc-cd09-0410-ab3c-d52691b4dbfc